--- a/light/ProcEquiv.html
+++ b/light/ProcEquiv.html
@@ -24,12 +24,14 @@
 <div class="doc">
 This file was written by Colm Bhandal, PhD student, Foundations and Methods group,
 School of Computer Science and Statistics, Trinity College, Dublin, Ireland.
+<div class="paragraph"> </div>
+
+*************************** Standard Imports 
+<div class="paragraph"> </div>
+
+*************************** Specialised Imports 
 </div>
 <div class="code">
-
-<br/>
-
-<br/>
 
 <br/>
 <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <span class="id" title="var">ComhCoq.StandardResults</span>.<br/>
@@ -57,13 +59,12 @@ Single step equivlance on process terms is defined as a bisimulation.
 <span class="id" title="keyword">Notation</span> &quot;p ~p~ q" := (<span class="id" title="var">bisimulation</span> <span class="id" title="var">p</span> <span class="id" title="var">q</span>) (<span class="id" title="tactic">at</span> <span class="id" title="keyword">level</span> 70).<br/>
 
 <br/>
+
+<br/>
 </div>
 
 <div class="doc">
-Generic Properties of the Relation 
-<div class="paragraph"> </div>
-
- The siumlation relation is reflexive.
+The siumlation relation is reflexive.
 </div>
 <div class="code">
 <span class="id" title="keyword">CoFixpoint</span> <span class="id" title="var">bisim_refl</span> <span class="id" title="var">p</span> : <span class="id" title="var">p</span> ~<span class="id" title="var">p</span>~ <span class="id" title="var">p</span>. <br/>
@@ -83,12 +84,6 @@ The siumlation relation is transitive.
 &nbsp;&nbsp;<span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
-</div>
-
-<div class="doc">
-Slightly more Specific 
-</div>
-<div class="code">
 
 <br/>
 
@@ -129,12 +124,6 @@ d' and the resulting p' is capable of doing the action a.
 &nbsp;&nbsp;<span class="id" title="var">sort</span> <span class="id" title="var">a</span> <span class="id" title="var">d</span> <span class="id" title="var">p</span> -&gt; <span class="id" title="var">sort</span> <span class="id" title="var">a</span> <span class="id" title="var">d</span> <span class="id" title="var">q</span>. <br/>
 
 <br/>
-</div>
-
-<div class="doc">
-Bisimulation and Syntax 
-</div>
-<div class="code">
 
 <br/>
 <span class="id" title="keyword">CoFixpoint</span> <span class="id" title="var">choice_bisim_symm</span> <span class="id" title="var">p1</span> <span class="id" title="var">p2</span> : <span class="id" title="var">p1</span> $+$ <span class="id" title="var">p2</span> ~<span class="id" title="var">p</span>~ <span class="id" title="var">p2</span> $+$ <span class="id" title="var">p1</span>. <br/>
@@ -163,14 +152,6 @@ Bisimulation and Syntax
 &nbsp;&nbsp;<span class="id" title="keyword">match</span> <span class="id" title="keyword">goal</span> <span class="id" title="keyword">with</span> [<span class="id" title="var">U1</span> : <span class="id" title="var">_</span> -<span class="id" title="var">P</span>- <span class="id" title="var">_</span> -<span class="id" title="var">P</span>&gt; <span class="id" title="var">_</span> |- <span class="id" title="var">_</span>] =&gt; <span class="id" title="tactic">inversion</span> <span class="id" title="var">U1</span>; <span class="id" title="tactic">subst</span> <span class="id" title="keyword">end</span>.<br/>
 
 <br/>
-</div>
-
-<div class="doc">
-If there are bisimilar processes in the context and there's a discrete
-transition from the first bisimilar process then this tactic generates a
-matching discrete transition from the second bisimilar process.
-</div>
-<div class="code">
 <span class="id" title="keyword">Ltac</span> <span class="id" title="var">bisim_disc_tac</span> :=<br/>
 &nbsp;&nbsp;<span class="id" title="keyword">match</span> <span class="id" title="keyword">goal</span> <span class="id" title="keyword">with</span><br/>
 &nbsp;&nbsp;| [<span class="id" title="var">U</span> : ?<span class="id" title="var">p</span> ~<span class="id" title="var">p</span>~ ?<span class="id" title="var">q</span>, <span class="id" title="var">V</span> : ?<span class="id" title="var">p</span> -<span class="id" title="var">PA</span>- <span class="id" title="var">_</span> -<span class="id" title="var">PA</span>&gt; <span class="id" title="var">_</span> |- <span class="id" title="var">_</span>] =&gt;<br/>
@@ -185,12 +166,6 @@ matching discrete transition from the second bisimilar process.
 &nbsp;&nbsp;<span class="id" title="keyword">match</span> <span class="id" title="keyword">goal</span> <span class="id" title="keyword">with</span> [<span class="id" title="var">U1</span> : <span class="id" title="var">_</span> -<span class="id" title="var">P</span>- <span class="id" title="var">_</span> -<span class="id" title="var">P</span>&gt; <span class="id" title="var">_</span> |- <span class="id" title="var">_</span>] =&gt; <span class="id" title="tactic">inversion</span> <span class="id" title="var">U1</span>; <span class="id" title="tactic">subst</span> <span class="id" title="keyword">end</span>.<br/>
 
 <br/>
-</div>
-
-<div class="doc">
-Similar to bisim_disc_tac but matches a delay rather than a discrete step.
-</div>
-<div class="code">
 <span class="id" title="keyword">Ltac</span> <span class="id" title="var">bisim_timed_tac</span> :=<br/>
 &nbsp;&nbsp;<span class="id" title="keyword">match</span> <span class="id" title="keyword">goal</span> <span class="id" title="keyword">with</span><br/>
 &nbsp;&nbsp;| [<span class="id" title="var">U</span> : ?<span class="id" title="var">p</span> ~<span class="id" title="var">p</span>~ ?<span class="id" title="var">q</span>, <span class="id" title="var">V</span> : ?<span class="id" title="var">p</span> -<span class="id" title="var">PD</span>- <span class="id" title="var">_</span> -<span class="id" title="var">PD</span>&gt; <span class="id" title="var">_</span> |- <span class="id" title="var">_</span>] =&gt;<br/>
