--- a/light/ProtAuxDefs.html
+++ b/light/ProtAuxDefs.html
@@ -24,12 +24,14 @@
 <div class="doc">
 This file was written by Colm Bhandal, PhD student, Foundations and Methods group,
 School of Computer Science and Statistics, Trinity College, Dublin, Ireland.
+<div class="paragraph"> </div>
+
+*************************** Standard Imports 
+<div class="paragraph"> </div>
+
+*************************** Specialised Imports 
 </div>
 <div class="code">
-
-<br/>
-
-<br/>
 
 <br/>
 <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <span class="id" title="var">ComhCoq.StandardResults</span>.<br/>
