--- a/verbose/toc.html
+++ b/verbose/toc.html
@@ -39,6 +39,7 @@
 <h2><a href="ProcEquiv.html">Library ProcEquiv</a></h2>
 <h2><a href="ProtAuxDefs.html">Library ProtAuxDefs</a></h2>
 <h2><a href="ProtAuxResults.html">Library ProtAuxResults</a></h2>
+<h2><a href="RInequalities.html">Library RInequalities</a></h2>
 <h2><a href="SoftwareLanguage.html">Library SoftwareLanguage</a></h2>
 <h2><a href="StandardResults.html">Library StandardResults</a></h2>
 </div>
